--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\ShuKalx\\AppData\\Roaming\\NetBeans\\12.5\\tomcat90.properties
 j2ee.server.home=C:/Users/ShuKalx/Downloads/Archivos Locales/apache-tomcat-9.0.73
 j2ee.server.instance=tomcat90:home=C:\\Users\\ShuKalx\\Downloads\\Archivos Locales\\apache-tomcat-9.0.73
+selected.browser=Chrome
 user.properties.file=C:\\Users\\ShuKalx\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
