--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -37,6 +37,28 @@ libs.jpa2-persistence.displayName=Persistence JPA2.1
 libs.jpa2-persistence.javadoc=\
     ${base}/jpa2-persistence/javax.persistence-2.1.0-doc.zip
 libs.jpa2-persistence.prop-maven-dependencies=org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.0.Final:jar
+libs.junit_4.classpath=\
+    ${base}/junit_4/junit-4.13.2.jar
+libs.junit_4.displayName=JUnit 4.13.2
+libs.junit_4.javadoc=\
+    ${base}/junit_4/junit-4.13.2-javadoc.jar
+libs.junit_4.prop-maven-dependencies=junit:junit:4.13.2:jar
+libs.junit_4.src=\
+    ${base}/junit_4/junit-4.13.2-sources.jar
+libs.junit_5.classpath=\
+    ${base}/junit_5/junit-jupiter-api-5.6.0.jar;\
+    ${base}/junit_5/junit-jupiter-params-5.6.0.jar;\
+    ${base}/junit_5/junit-jupiter-engine-5.6.0.jar
+libs.junit_5.displayName=JUnit 5.6.0
+libs.junit_5.javadoc=\
+    ${base}/junit_5/junit-jupiter-api-5.6.0-javadoc.jar;\
+    ${base}/junit_5/junit-jupiter-params-5.6.0-javadoc.jar;\
+    ${base}/junit_5/junit-jupiter-engine-5.6.0-javadoc.jar
+libs.junit_5.prop-maven-dependencies=\n                org.junit.jupiter:junit-jupiter-api:5.6.0:jar\n                org.junit.jupiter:junit-jupiter-params:5.6.0:jar\n                org.junit.jupiter:junit-jupiter-engine:5.6.0:jar\n            
+libs.junit_5.src=\
+    ${base}/junit_5/junit-jupiter-api-5.6.0-sources.jar;\
+    ${base}/junit_5/junit-jupiter-params-5.6.0-sources.jar;\
+    ${base}/junit_5/junit-jupiter-engine-5.6.0-sources.jar
 libs.spring-framework300.classpath=\
     ${base}/spring-framework300/org-apache-commons-logging.jar;\
     ${base}/spring-framework300/cglib-2.2.jar;\
@@ -88,3 +110,10 @@ libs.struts.displayName=Struts 1.3.10
 libs.struts.javadoc=\
     ${base}/struts/struts-1.3.10-javadoc.zip
 libs.struts.prop-maven-dependencies=\n                org.apache.struts:struts-core:1.3.10:jar\n                org.apache.struts:struts-el:1.3.10:jar\n                org.apache.struts:struts-extras:1.3.10:jar\n                org.apache.struts:struts-faces:1.3.10:jar\n                org.apache.struts:struts-mailreader-dao:1.3.10:jar\n                org.apache.struts:struts-scripting:1.3.10:jar\n                org.apache.struts:struts-taglib:1.3.10:jar\n                org.apache.struts:struts-tiles:1.3.10:jar\n            
+libs.testng.classpath=\
+    ${base}/testng/testng-6.14.3.jar;\
+    ${base}/testng/jcommander-1.78.jar
+libs.testng.displayName=TestNG 6.14.3
+libs.testng.javadoc=\
+    ${base}/testng/testng-6.13.1-javadoc.jar
+libs.testng.prop-maven-dependencies=org.testng:testng:6.14.3:jar
